--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
         "resolve-url-loader": "2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
-        "vue": "^2.5.17",
+        "vue": "^2.6.11",
         "vue-axios": "^2.1.5",
         "vue-loader": "^15.9.0",
         "vue-router": "^3.1.6",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue": "^2.6.11",
+        "admin-lte": "^3.0.2",
+        "js-cookie": "^2.2.1",
         "vue-i18n": "^8.15.5",
-        "vuetify": "^2.2.16"
+        "vuetify": "^2.2.17"
     }
 }
