--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
+        "jquery": "^3.4.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
@@ -27,9 +27,20 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.12.1",
         "admin-lte": "^3.0.2",
+        "bs4-summernote": "^0.8.10",
+        "chart.js": "^2.9.3",
+        "codemirror": "^5.52.0",
+        "jqvmap": "^1.5.1",
         "js-cookie": "^2.2.1",
+        "moment": "^2.24.0",
+        "overlayscrollbars": "^1.11.0",
+        "postcss-css-variables": "^0.14.0",
+        "style-loader": "^1.1.3",
+        "tempusdominus-core": "^5.0.3",
         "vue-i18n": "^8.15.5",
+        "vue-router-layout": "^0.1.5",
         "vuetify": "^2.2.17"
     }
 }
