--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "style-loader": "^1.1.3",
         "tempusdominus-core": "^5.0.3",
         "vue-i18n": "^8.15.5",
+        "vue-moment": "^4.1.0",
         "vue-router-layout": "^0.1.5",
         "vuetify": "^2.2.17"
     }
