--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,9 @@
 {
-    "/js/app.js": "/js/app.js?id=33de0534870de04bc122",
+    "/js/app.js": "/js/app.js?id=69a61dbd6f9cbcf2560f",
     "/css/app.css": "/css/app.css?id=ff0cbdbe1b0707985b9c",
     "/js/manifest.js": "/js/manifest.js?id=41f053ba9a94d81b39f8",
     "/js/vendor.js": "/js/vendor.js?id=efaba3c7c076d1a51650",
+    "/dist/img/c-seeklogo.com.svg": "/dist/img/c-seeklogo.com.svg?id=8469bbfb1302b1a27430",
     "/dist/img/AdminLTELogo.png": "/dist/img/AdminLTELogo.png?id=000ff2f80ff61067318e",
     "/dist/img/avatar.png": "/dist/img/avatar.png?id=af037d71002bf9e4137f",
     "/dist/img/avatar04.png": "/dist/img/avatar04.png?id=13b388411e76049bf1a5",
