--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "2.3.1",
         "sass": "^1.20.1",
-        "sass-loader": "7.*",
+        "sass-loader": "8.*",
         "vue": "^2.6.11",
         "vue-axios": "^2.1.5",
         "vue-loader": "^15.9.0",
@@ -32,16 +32,21 @@
         "bs4-summernote": "^0.8.10",
         "chart.js": "^2.9.3",
         "codemirror": "^5.52.0",
+        "daterangepicker": "^3.0.5",
+        "icheck-bootstrap": "^3.0.1",
         "jqvmap": "^1.5.1",
         "js-cookie": "^2.2.1",
         "moment": "^2.24.0",
         "overlayscrollbars": "^1.11.0",
         "postcss-css-variables": "^0.14.0",
+        "select2": "^4.0.13",
         "style-loader": "^1.1.3",
         "tempusdominus-core": "^5.0.3",
         "vue-i18n": "^8.15.5",
+        "vue-inputmask": "^0.2.1",
         "vue-moment": "^4.1.0",
         "vue-router-layout": "^0.1.5",
+        "vue-search-select": "^2.9.3",
         "vuetify": "^2.2.17"
     }
 }
