--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,23 @@ public/fonts
 public/js/app.js
 public/css/app.css
 public/mix-manifest.json
+package-lock.json
+package.json
+public/mix-manifest.json
+public/css/app.css
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-brands-400.eot
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-brands-400.svg
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-brands-400.ttf
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-brands-400.woff
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-brands-400.woff2
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-regular-400.eot
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-regular-400.svg
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-regular-400.ttf
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-regular-400.woff
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-regular-400.woff2
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-solid-900.eot
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-solid-900.svg
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-solid-900.ttf
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-solid-900.woff
+public/fonts/vendor/@fortawesome/fontawesome-free/webfa-solid-900.woff2
+public/js/app.js
